--- a/docs/1.options.md
+++ b/docs/1.options.md
@@ -29,7 +29,7 @@ While the Azure CLI is great for creating ad hoc resources, when it comes to a p
 
 For
 
-- 1st party so latest nd greatest
+- 1st party so latest and greatest
 - Great documentation
 - Same commands for both bash and PowerShell
 
