--- a/docs/3.prereqs.md
+++ b/docs/3.prereqs.md
@@ -7,6 +7,5 @@
 - Azure Terraform extension
 - Azure CLI
 - Terraform
-- GitHub Account
-- Azure DevOps account
+- Azure DevOps account - import -> clone
 - Azure subscription
