--- a/docs/1.options.md
+++ b/docs/1.options.md
@@ -1,4 +1,4 @@
-[![infra as code with Terraform](/docs/images/banner.png)](../README.md)
+[![infra as code with Terraform](/docs/images/banner.png)](/README.md)
 
 # IaC options for Azure
 
